--- a/misc/encounters/rudinnranger.html
+++ b/misc/encounters/rudinnranger.html
@@ -23,7 +23,7 @@ credits: >
 toc:
   -
     id: flavortext
-    name: Flavor text
+    name: General flavor text
     subheadings:
       -
         id: encounter
@@ -40,34 +40,25 @@ toc:
       -
         id: ft-spareable
         name: Spareable
-      -
-        name: ACTs
-        subheadings:
-          -
-            id: ft-check
-            name: Check
-          -
-            id: ft-convince
-            name: Convince
-          -
-            id: ft-compliment
-            name: Compliment
   -
     id: dialogue
-    name: Dialogue
+    name: General dialogue
     subheadings:
       -
         id: dialogue-standard
         name: Standard
+  -
+    name: ACTs
+    subheadings:
       -
-        name: ACTs
-        subheadings:
-          -
-            id: dialogue-convince
-            name: Convince
-          -
-            id: dialogue-compliment
-            name: Compliment
+        id: check
+        name: Check
+      -
+        id: convince
+        name: Convince
+      -
+        id: compliment
+        name: Compliment
 ---
 {% comment %}
 Check for encounter instances with the following regex:
@@ -76,7 +67,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 {% endcomment %}
 
 <section class="d-section" id="flavortext">
-	<h2>Flavor text</h2>
+	<h2>General flavor text</h2>
 
 	<h3 id="encounter">Initial encounter</h3>
 	<p>Appears with another Rudinn Ranger.</p>
@@ -124,18 +115,42 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rudinn Ranger seems totally flattered.</d-text>
 	</d-box>
+</section>
 
-	<hr>
+<section class="d-section" id="dialogue">
+	<h2>General dialogue</h2>
 
-	<h3 id="ft-check">Check</h3>
+	<h3 id="dialogue-standard">Standard</h3>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>Long live<span class="break"></span> the king!</d-text>
+	</d-box>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>Glimmer<span class="break"></span> glammor</d-text>
+	</d-box>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>Perish,<span class="break"></span> Lightners!</d-text>
+	</d-box>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>I'm the,<span class="break"></span> diamond,<span class="break"></span> here's the<span class="break"></span> rough!</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="check">
+	<h2>Check</h2>
 	<d-box theme="battlemenu">
 		<d-text asterisk>RUDINN RANGER - AT 8 DF 0</d-text>
 		<d-text asterisk>Ideally multicolored, but they all wanted to be red.</d-text>
 	</d-box>
+</section>
 
-	<hr>
+<section class="d-section" id="convince">
+	<h2>Convince</h2>
 
-	<h3 id="ft-convince">Convince</h3>
+	<h3 id="convince-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You tried to explain why fighting is bad.</d-text>
 	</d-box>
@@ -146,8 +161,54 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-compliment">{% include acticon chara="Susie" -%} Compliment</h3>
+	<h3 id="convince-dialogue">Dialogue</h3>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>Enough!</d-text>
+		<d-text>You can't<span class="break"></span> convince<span class="break"></span> me!</d-text>
+	</d-box>
+
+	<hr>
+
+	<h3 id="convince-dialogue-unused">Unused dialogue</h3>
+	<p>Seems to be left over from <a href="{{ '/misc/encounters/rudinn#dialogue-convince' | relative_url }}">Rudinn's encounter</a>.</p>
 	<h4>First time</h4>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>You kidding?</d-text>
+		<d-text>I can't quit.</d-text>
+		<d-text>Stopping you<span class="break"></span> is my job!</d-text>
+	</d-box>
+	<d-box theme="battlemenu">
+		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
+		<d-text asterisk>Really?</d-text>
+		<d-text asterisk>What do you spend your money on?</d-text>
+	</d-box>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>I'm a normal<span class="break"></span> person.</d-text>
+	</d-box>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>I spend all<span class="break"></span> my money on<span class="break"></span> RENT and<span class="break"></span> MYSTIC GEMs.</d-text>
+	</d-box>
+	<d-box theme="battlemenu">
+		<d-sprite speaker="Ralsei" variant="hat" emotion="3"></d-sprite>
+		<d-text asterisk>(Kris, let's try CONVINCING them again...)</d-text>
+	</d-box>
+
+	<h4>Subsequent times</h4>
+	<d-box theme="battletalk">
+		<d-speaker>Rudinn Ranger</d-speaker>
+		<d-text>Alright,<span class="break"></span> you convinced<span class="break"></span> me!!</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="compliment">
+	<h2>{% include acticon chara="Susie" -%} Compliment</h2>
+
+	<h3 id="compliment1">First time</h3>
+	<h4>Flavor text</h4>
 	<h5>If this is the first use across all encounters</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You told Susie to COMPLIMENT the enemy!</d-text>
@@ -199,83 +260,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr class="hr2">
 	<p class="note">Rudinn Ranger gains 100% <span class="yellow">Mercy</span>.</p>
 
-	<h4>Subsequent times</h4>
-	<d-box theme="battlemenu">
-		<d-text asterisk>Susie actively didn't COMPLIMENT the enemy!</d-text>
-	</d-box>
-	<d-box theme="battlemenu">
-		<d-sprite speaker="Susie" variant="noeyes" emotion="0"></d-sprite>
-		<d-text asterisk>Look, it's just gonna be weird if I keep going.</d-text>
-	</d-box>
-</section>
-
-<section class="d-section" id="dialogue">
-	<h2>Dialogue</h2>
-
-	<h3 id="dialogue-standard">Standard</h3>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>Long live<span class="break"></span> the king!</d-text>
-	</d-box>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>Glimmer<span class="break"></span> glammor</d-text>
-	</d-box>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>Perish,<span class="break"></span> Lightners!</d-text>
-	</d-box>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>I'm the,<span class="break"></span> diamond,<span class="break"></span> here's the<span class="break"></span> rough!</d-text>
-	</d-box>
-
-	<hr>
-
-	<h3 id="dialogue-convince">Convince</h3>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>Enough!</d-text>
-		<d-text>You can't<span class="break"></span> convince<span class="break"></span> me!</d-text>
-	</d-box>
-
-	<h4>Unused variants</h4>
-	<p>Seem to be left over from <a href="{{ '/misc/encounters/rudinn#dialogue-convince' | relative_url }}">Rudinn's encounter</a>.</p>
-	<h5>First time</h5>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>You kidding?</d-text>
-		<d-text>I can't quit.</d-text>
-		<d-text>Stopping you<span class="break"></span> is my job!</d-text>
-	</d-box>
-	<d-box theme="battlemenu">
-		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
-		<d-text asterisk>Really?</d-text>
-		<d-text asterisk>What do you spend your money on?</d-text>
-	</d-box>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>I'm a normal<span class="break"></span> person.</d-text>
-	</d-box>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>I spend all<span class="break"></span> my money on<span class="break"></span> RENT and<span class="break"></span> MYSTIC GEMs.</d-text>
-	</d-box>
-	<d-box theme="battlemenu">
-		<d-sprite speaker="Ralsei" variant="hat" emotion="3"></d-sprite>
-		<d-text asterisk>(Kris, let's try CONVINCING them again...)</d-text>
-	</d-box>
-
-	<h5>Subsequent times</h5>
-	<d-box theme="battletalk">
-		<d-speaker>Rudinn Ranger</d-speaker>
-		<d-text>Alright,<span class="break"></span> you convinced<span class="break"></span> me!!</d-text>
-	</d-box>
-
-	<hr>
-
-	<h3 id="dialogue-compliment">{% include acticon chara="Susie" -%} Compliment</h3>
-	<h4>First time</h4>
+	<h4>Dialogue</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>No one ever<span class="break"></span> said THAT to<span class="break"></span> me before<span class="break"></span> ...</d-text>
@@ -285,7 +270,19 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text>The King<span class="break"></span> never said<span class="break"></span> THAT to me<span class="break"></span> before...</d-text>
 	</d-box>
 
-	<h4>Subsequent times</h4>
+	<hr>
+
+	<h3 id="compliment2">Subsequent times</h3>
+	<h4>Flavor text</h4>
+	<d-box theme="battlemenu">
+		<d-text asterisk>Susie actively didn't COMPLIMENT the enemy!</d-text>
+	</d-box>
+	<d-box theme="battlemenu">
+		<d-sprite speaker="Susie" variant="noeyes" emotion="0"></d-sprite>
+		<d-text asterisk>Look, it's just gonna be weird if I keep going.</d-text>
+	</d-box>
+
+	<h4>Dialogue</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>Yeah it<span class="break"></span> would be<span class="break"></span> weird.</d-text>
